--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Myntra clone</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="./css/bag.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
@@ -39,12 +40,13 @@
                 <span>Whishlist</span>
             </div>
 
-            <div class="action_container">
+            <a class="action_container" href="pages/bag.html">
                 <span class="material-symbols-outlined action_icon">
                     shopping_bag
                     </span>
                 <span>Bag</span>
-            </div>
+                <span class="bag-item-count">0</span>
+            </a>
 
         </div>
         
